Created css js-login

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,7 +54,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 40px;
+  font-size: 60px;
 }
 .header-title img {
   border: 1px solid black;
@@ -69,6 +69,7 @@ body {
 }
 
 .header_day input {
+  display: flex;
   border: none;
   color: white;
   font-size: 30px;
@@ -90,7 +91,7 @@ body {
 .content_todo {
   display: flex;
   flex-direction: column;
-  height: 400px;
+  height: 600px;
   width: 20%;
   border: 1px solid white;
   border-radius: 5px;
@@ -101,6 +102,11 @@ body {
 .content_todo span {
   font-size: 25px;
   margin-left: 30px;
+}
+
+#todo-form {
+  display: flex;
+  align-items: center;
 }
 
 .content_todo ul {
@@ -150,13 +156,12 @@ body {
 
 .footer {
   display: flex;
-  width: 50%;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: white;
-  margin-top: 30px;
-  margin-left: 25%;
+  margin-top: 40px;
 }
 
 .footer_login {
@@ -164,7 +169,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 200px;
 }
 
 .footer-login__column h1 {
