--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -21,11 +21,10 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: -1;
 }
-
 // header 시간, 날씨, TODOLIST
 
 .header {
