css style modify

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,7 +24,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: -1;
 }
@@ -54,7 +54,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 40px;
+  font-size: 60px;
 }
 .header-title img {
   border: 1px solid black;
@@ -69,6 +69,7 @@ body {
 }
 
 .header_day input {
+  display: flex;
   border: none;
   color: white;
   font-size: 30px;
@@ -90,7 +91,7 @@ body {
 .content_todo {
   display: flex;
   flex-direction: column;
-  height: 400px;
+  height: 600px;
   width: 20%;
   border: 1px solid white;
   border-radius: 5px;
@@ -155,8 +156,9 @@ body {
   justify-content: center;
   align-items: center;
   color: white;
-  margin-top: 30px;
+  margin-top: 45px;
   margin-left: 25%;
+  margin-right: 25%;
 }
 
 .footer_login {
@@ -164,7 +166,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 200px;
 }
 
 .footer-login__column h1 {
