--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -50,7 +50,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 40px;
+  font-size: 60px;
   img {
     border: 1px solid black;
     border-radius: 50%;
@@ -66,6 +66,7 @@ body {
 }
 
 .header_day input {
+  display: flex;
   border: none;
   color: white;
   font-size: 30px;
@@ -87,7 +88,7 @@ body {
 .content_todo {
   display: flex;
   flex-direction: column;
-  height: 400px;
+  height: 600px;
   width: 20%;
   border: 1px solid white;
   border-radius: 5px;
@@ -147,15 +148,15 @@ body {
   justify-content: center;
   align-items: center;
   color: white;
-  margin-top: 30px;
+  margin-top: 45px;
   margin-left: 25%;
+  margin-right: 25%;
 }
 .footer_login {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 200px;
 }
 .footer-login__column h1 {
   //유저 닉네임
