--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -76,6 +76,20 @@ body {
 .header_weather {
   font-size: 30px;
 }
+.logout-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  button {
+    border: none;
+    border-radius: 5px;
+    background-color: black;
+  }
+  img {
+    display: flex;
+    justify-content: center;
+  }
+}
 
 //content - todo list
 
@@ -98,6 +112,7 @@ body {
   span {
     font-size: 25px;
     margin-left: 30px;
+    margin-right: 30px;
   }
 }
 .content_todo ul {
@@ -138,6 +153,11 @@ body {
     color: gray;
   }
 }
+#todo-form {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
 
 //footer
 
@@ -163,6 +183,7 @@ body {
   font-size: 50px;
   margin-bottom: 0px;
 }
+
 #footer-login__form input {
   color: white;
   border: none;
@@ -196,8 +217,13 @@ body {
   margin-top: 30px;
   animation: bounce 3.5s infinite linear;
   box-shadow: 0 0 0 1px #ff6f10, 0 0 10px 5px rgba(255, 128, 43, 0.993);
+  transition: all 1s;
 }
 #quote-author {
   font-size: 20px;
   margin-top: 60px;
+  cursor: pointer;
+  &:hover {
+    color: #ff6f10;
+  }
 }
