--- a/CSS/style.css
+++ b/CSS/style.css
@@ -125,6 +125,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  padding-left: 30px;
 }
 .content_todo ul span {
   margin: 10px;
@@ -168,7 +169,6 @@ body {
 #todo-form {
   display: flex;
   align-items: center;
-  justify-content: end;
 }
 
 .footer {
