--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,30 @@
+body {
+  background-color: black;
+  padding: 0px;
+  margin: 0px;
+  font-family: "Kavoon", cursive;
+  height: 100%;
+}
+
+.main_screen {
+  color: white;
+  height: 100%;
+  padding: 20px 30px;
+}
+
+.bgimg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.hidden {
+  display: none;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -218,14 +245,15 @@
 
 #content_menu_list {
   font-size: 20px;
+  padding-left: 20px;
   -webkit-animation: listOpenAnimation 1.5s ease-in-out forwards;
           animation: listOpenAnimation 1.5s ease-in-out forwards;
 }
-#content_menu_list div {
+#content_menu_list li {
   margin-bottom: 10px;
   cursor: pointer;
 }
-#content_menu_list div:hover {
+#content_menu_list li:hover {
   color: #ff6f10;
 }
 
@@ -239,6 +267,77 @@
 }
 
 @keyframes listOpenAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.content-game {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 25%;
+  transition: all 1.4s;
+}
+
+.content-game__header {
+  margin-bottom: 7px;
+}
+
+.content-game input {
+  padding: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.06);
+  box-shadow: 0 0 0 1px #ffffff, 0 0 10px 1px rgba(252, 249, 249, 0.993);
+}
+
+.content-game button {
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.06);
+  box-shadow: 0 0 0 1px #ffffff, 0 0 10px 1px rgba(252, 249, 249, 0.993);
+  cursor: pointer;
+}
+
+.content-game button:hover {
+  color: black;
+  background-color: #fff;
+}
+
+.content-game__form span:last-child {
+  display: block;
+  margin-top: 13px;
+  margin-bottom: 5px;
+  font-size: 22px;
+  -webkit-animation: gameResultAnimation 1.4s ease-in-out forwards;
+          animation: gameResultAnimation 1.4s ease-in-out forwards;
+}
+
+.content-game__result {
+  font-size: 40px;
+  -webkit-animation: gameResultAnimation 1.4s ease-in-out forwards;
+          animation: gameResultAnimation 1.4s ease-in-out forwards;
+}
+
+@-webkit-keyframes gameResultAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes gameResultAnimation {
   from {
     opacity: 0;
   }
@@ -323,31 +422,4 @@
 }
 #quote-author:hover {
   color: #ff6f10;
-}
-
-body {
-  background-color: black;
-  padding: 0px;
-  margin: 0px;
-  font-family: "Kavoon", cursive;
-  height: 100%;
-}
-
-.main_screen {
-  color: white;
-  height: 100%;
-  padding: 20px 30px;
-}
-
-.bgimg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-
-.hidden {
-  display: none;
 }/*# sourceMappingURL=style.css.map */
