--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,12 +3,12 @@ body {
   padding: 0px;
   margin: 0px;
   font-family: "Kavoon", cursive;
-  height: 100%;
+  height: 100vh;
 }
 
 .main_screen {
   color: white;
-  height: 100%;
+  height: 95vh;
   padding: 20px 30px;
 }
 
@@ -43,7 +43,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  font-size: 60px;
+  font-size: 42px;
 }
 
 .header-title {
@@ -85,7 +85,7 @@ body {
 .logout-button button {
   border: none;
   border-radius: 5px;
-  background-color: black;
+  background-color: inherit;
 }
 .logout-button img {
   display: flex;
@@ -193,7 +193,7 @@ body {
   margin-bottom: 20px;
 }
 .content_menu_title span {
-  font-size: 40px;
+  font-size: 50px;
 }
 
 .menu-trigger,
@@ -205,7 +205,7 @@ body {
 
 .menu-trigger {
   position: relative;
-  width: 45px;
+  width: 50px;
   height: 24px;
   margin-left: 10px;
 }
@@ -244,7 +244,7 @@ body {
 }
 
 #content_menu_list {
-  font-size: 20px;
+  font-size: 25px;
   padding-left: 20px;
   -webkit-animation: listOpenAnimation 1.5s ease-in-out forwards;
           animation: listOpenAnimation 1.5s ease-in-out forwards;
