--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -3,11 +3,11 @@ body {
   padding: 0px;
   margin: 0px;
   font-family: "Kavoon", cursive;
-  height: 100%;
+  height: 100vh;
 }
 .main_screen {
   color: white;
-  height: 100%;
+  height: 95vh;
   padding: 20px 30px;
 }
 .bgimg {
@@ -41,7 +41,7 @@ body {
   flex-direction: column;
   align-items: flex-end;
 
-  font-size: 60px;
+  font-size: 42px;
 }
 .header-title {
   display: flex;
@@ -80,7 +80,7 @@ body {
   button {
     border: none;
     border-radius: 5px;
-    background-color: black;
+    background-color: inherit;
   }
   img {
     display: flex;
@@ -177,7 +177,7 @@ body {
   align-items: center;
   margin-bottom: 20px;
   span {
-    font-size: 40px;
+    font-size: 50px;
   }
 }
 
@@ -192,7 +192,7 @@ body {
 
 .menu-trigger {
   position: relative;
-  width: 45px;
+  width: 50px;
   height: 24px;
   margin-left: 10px;
 }
@@ -231,7 +231,7 @@ body {
 }
 
 #content_menu_list {
-  font-size: 20px;
+  font-size: 25px;
   padding-left: 20px;
   animation: listOpenAnimation 1.5s ease-in-out forwards;
   li {
